force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Sender_Signs_Only__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sender_Signs_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the agreement or document is presented only to the sender for signature.</description>
    <label>Sender Signs Only</label>
    <type>Checkbox</type>
</CustomField>