force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signature_Type__c</fullName>
    <description>Send for electronic signature or request written signature.</description>
    <inlineHelpText>Send for electronic signature or request written signature returned by fax.</inlineHelpText>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>e-Signature</fullName>
                <default>true</default>
                <label>e-Signature</label>
            </value>
            <value>
                <fullName>Written Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>