force-app/main/default/objects/echosign_dev1__Agreement_Template__c/validationRules/echosign_dev1__Confirm_Password.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__Confirm_Password</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(  
    OR( echosign_dev1__View_Password__c ,  echosign_dev1__Sign_Password__c  ) ,   
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  ),
  AND(  
    OR(  
      TEXT(  echosign_dev1__External_Signers_Verification_Method__c  ) = &#39;Password to Sign Agreement&#39;,  
      TEXT(  echosign_dev1__Internal_Signers_Verification_Method__c  ) = &#39;Password to Sign Agreement&#39; 
    ),
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  )
)</errorConditionFormula>
    <errorDisplayField>echosign_dev1__Confirm_Password__c</errorDisplayField>
    <errorMessage>Confirm password does not match the password that you want the recipient to input.</errorMessage>
</ValidationRule>