force-app/main/default/objects/echosign_dev1__Agreement_Template__c/validationRules/echosign_dev1__Written_Without_Revisions.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__Written_Without_Revisions</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  TEXT(echosign_dev1__Signature_Type__c) = &#39;Written Signature&#39;,
  false
)</errorConditionFormula>
    <errorMessage>Suggesting revisions is not possible with a written signature.</errorMessage>
</ValidationRule>